src/test/compile-fail/use-meta-dup.rs
// error-pattern:duplicate meta item `name`

use std(name = "std", name = "nonstd");

fn main() { }
